--- a/core/pom.xml
+++ b/core/pom.xml
@@ -278,7 +278,7 @@
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
-            <version>4.5.2</version>
+            <version>${net.java.dev.jna.version}</version>
         </dependency>
     </dependencies>
     <build>
