--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=${PROFILE}
+spring.profiles.active=${PROFILE:dev}
 
 # Email for service-to-service communication with GreenCityUser
 spring.liquibase.parameters.service-email=service@greencity.ua
