--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.profiles.active=${PROFILE:dev}
 
+# File upload limit
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=100MB
+server.tomcat.max-http-post-size=100MB
+
 # Email for service-to-service communication with GreenCityUser
 spring.liquibase.parameters.service-email=service@greencity.ua
