--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -22,6 +22,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>greencity</groupId>
+            <artifactId>service-api</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
