--- a/az-cd-pipeline.yml
+++ b/az-cd-pipeline.yml
@@ -97,6 +97,13 @@ stages:
       inputs:
         PathtoPublish: '$(build.artifactstagingdirectory)'
         artifactName: '$(artifactName)'
+    
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'Dockerhub_Skyere'
+        repository: 'skyere/greencity'
+        command: 'buildAndPush'
+        Dockerfile: 'Dockerfile'
 
 - stage: Deploy
   jobs:
