--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -18,6 +18,7 @@
         <liquibase.version>3.8.4</liquibase.version>
         <postgresql.version>42.2.5</postgresql.version>
         <testcontainers.version>1.15.0-rc2</testcontainers.version>
+        <hibernate-types-52.version>2.16.2</hibernate-types-52.version>
     </properties>
 
     <dependencies>
@@ -90,6 +91,15 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.vladmihalcea</groupId>
+            <artifactId>hibernate-types-52</artifactId>
+            <version>${hibernate-types-52.version}</version>
         </dependency>
     </dependencies>
 </project>
