--- a/service/pom.xml
+++ b/service/pom.xml
@@ -19,6 +19,7 @@
         <commons-fileupload.version>1.3</commons-fileupload.version>
         <commons-io.version>2.6</commons-io.version>
         <org.springframework.social.version>2.0.3.RELEASE</org.springframework.social.version>
+        <spring-kafka.version>2.7.2</spring-kafka.version>
     </properties>
 
     <dependencies>
@@ -128,7 +129,7 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
-            <version>2.7.2</version>
+            <version>${spring-kafka.version}</version>
         </dependency>
     </dependencies>
 
