--- a/greencity-chart/templates/greencity.yaml
+++ b/greencity-chart/templates/greencity.yaml
@@ -19,7 +19,7 @@ spec:
         "kubernetes.io/os": linux
       containers:
       - name: greencity
-        image: skyere/greencity:2358
+        image: {{ .Values.image }}
         resources:
           requests:
             cpu: 50m
