--- a/service/src/main/resources/notification.properties
+++ b/service/src/main/resources/notification.properties
@@ -1,33 +1,35 @@
 USERS=users
 
-FRIEND_REQUEST_RECEIVED_TITLE=You have received a friend request
-FRIEND_REQUEST_RECEIVED={user} sent you a friend request.
-FRIEND_REQUEST_ACCEPTED_TITLE=Your friend request was accepted
-FRIEND_REQUEST_ACCEPTED=Now you are friends with {user}.
-
-ECONEWS_COMMENT_REPLY_TITLE=You received a comment reply
-ECONEWS_COMMENT_REPLY=Your comment {message} received a reply from {user}.
 ECONEWS_COMMENT_LIKE_TITLE=You received a like.
 ECONEWS_COMMENT_LIKE=Your comment {message} received a like from {user}.
-EVENT_COMMENT_REPLY_TITLE=You received a comment reply
-EVENT_COMMENT_REPLY=Your comment {message} received a reply from {user}.
+ECONEWS_COMMENT_REPLY_TITLE=You received a comment reply
+ECONEWS_COMMENT_REPLY={user} replied to your comment on the {message} {title}.
 EVENT_COMMENT_LIKE_TITLE=You received a like.
-EVENT_COMMENT_LIKE=Your comment {message} received a like from {user}.
+EVENT_COMMENT_LIKE={user} likes your comment to {message} {title}.
+EVENT_COMMENT_REPLY_TITLE=You received a comment reply
+EVENT_COMMENT_REPLY={user} replied to your comment on the {message} {title}.
 
-ECONEWS_LIKE_TITLE=Your news received a like
-ECONEWS_LIKE=News {message} received a like from {user}.
+ECONEWS_COMMENT_TITLE=Your received a comment
+ECONEWS_COMMENT={user} commented on your news {message}.
 ECONEWS_CREATED_TITLE=You have created eco news
 ECONEWS_CREATED=You successfully created eco news {message}.
-ECONEWS_COMMENT_TITLE=Your received a comment
-ECONEWS_COMMENT=Your news {message} received a comment from {user}.
+ECONEWS_LIKE_TITLE=Your news received a like
+ECONEWS_LIKE=News {message} received a like from {user}.
 
+EVENT_COMMENT_TITLE=You received a comment
+EVENT_COMMENT={user} commented on your event {message}.
+EVENT_CANCELED_TITLE=Event was canceled
+EVENT_CANCELED=Unfortunately, event {message} was canceled.
 EVENT_CREATED_TITLE=You have created event
 EVENT_CREATED=You successfully created event {message}.
-EVENT_CANCELED_TITLE=Event was canceled
-EVENT_CANCELED=Event {message} was canceled.
+EVENT_JOINED_TITLE=New people joined your event
+EVENT_JOINED={user} joined your event {message}.
+EVENT_NAME_UPDATED_TITLE=Event was updated
+EVENT_NAME_UPDATED=Event {message} was updated. New name is {title}.
 EVENT_UPDATED_TITLE=Event was updated
 EVENT_UPDATED=Event {message} was updated.
-EVENT_JOINED_TITLE=New people joined your event
-EVENT_JOINED={user} joined your event.
-EVENT_COMMENT_TITLE=You received a comment
-EVENT_COMMENT=Your event {message} received a comment from {user}.
+
+FRIEND_REQUEST_ACCEPTED_TITLE=Your friend request was accepted
+FRIEND_REQUEST_ACCEPTED={user} accepted your friend request.
+FRIEND_REQUEST_RECEIVED_TITLE=You have received a friend request
+FRIEND_REQUEST_RECEIVED={user} sent you a friend request.
