--- a/core/src/main/resources/application-prod.properties
+++ b/core/src/main/resources/application-prod.properties
@@ -41,7 +41,7 @@ verifyEmailTimeHour=${VERIFY_EMAIL}
 # Logger
 logging.level.root=${LOG_LEVEL_ROOT}
 logging.level.greencity.exception.handler.CustomExceptionHandler=${LOG_EXCEPTION_HANDLER}
-logging.file.path=./
+logging.file.path=${LOG_PATH}
 logging.file.name=${LOG_FILE}
 logging.pattern.file=${LOG_PATTERN}
 
