--- a/chart-test/valuesTest.yaml
+++ b/chart-test/valuesTest.yaml
@@ -25,10 +25,9 @@ ingress:
   # Example: "https://origin-site.com:4443, http://origin-site.com, https://example.org:1199"
   # "https://*.origin-site.com:4443, http://*.origin-site.com"
   # If not set will be used "*" instead. Example: cors_allow_origin: ""
-  cors_allow_origin: https://ita-social-projects.github.io/GreenCityClient/, http://localhost:4205, http://localhost:4205/*, https://www.testgreencity.ga/GreenCityClient/, "http://localhost:8085", "http://localhost:8085/*"
+  cors_allow_origin: https://ita-social-projects.github.io/GreenCityClient/, http://localhost:4200, http://localhost:4200/*, https://www.testgreencity.ga/GreenCityClient/
 
   # Only when cors_allow_origin is not "*"
-  cors_allow_credentials: "true"
+  cors_allow_credentials: "false"
 
   hostname: greencity-test.testgreencity.ga
-  
