--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -16,3 +16,13 @@ springdoc.paths-to-match=/**
 springdoc.paths-to-exclude=/management/**
 springdoc.packages-to-scan=greencity.controller
 springdoc.swagger-ui.doc-expansion=none
+
+#WebSockets
+spring.messaging.stomp.websocket.allowed-origins=\
+  https://www.greencity.social, \
+  https://www.greencity.social/, \
+  https://www.greencity.social/*, \
+  http://localhost:4200, \
+  http://localhost:4200/*, \
+  http://localhost:4205, \
+  http://localhost:4205/*
